--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
 .fullwrap{
-	width: 510px;
+	max-width:960px;
 	margin: 0 auto;
 }
 .wow{
-	width: 450px;
+	width:310px;
 	background-color: blue;
 	border-radius: 50%;
 	border:2px solid grey;
-	font-size: 200%;
+	font-size: 150%;
 	text-transform: uppercase;
 	text-align: center;
-	line-height: 1.8;
+	line-height: 1.5;
 	font-weight: bold;
 	color: #fff;
 	margin: 0 auto;
 }
 .lesson{
-	margin: 0;
+	margin-left: 40px;
 	padding: 40px 0 0 0;
 }
 .lesson, .lesson li ul{
@@ -47,4 +47,9 @@
 	display: inline-block;
 	font-size: 24px;
 	padding-top: 30px; 
+}
+footer{
+	border-top:  1px solid grey;
+	padding: 20px;
+	margin: 30px 20px;
 }
