--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
 	font-size: 24px;
 	padding-top: 30px; 
 }
-footer{
+.footer{
 	border-top:  1px solid grey;
 	padding: 20px;
 	margin: 30px 20px;
