--- a/rozetka_4_task_1/css/style.css
+++ b/rozetka_4_task_1/css/style.css
@@ -135,8 +135,8 @@ h1{
 	line-height: 1.5;
 }
 .center img{
-	width: 100%;
-	margin: 0 50px;
+	width: 60%;
+	margin: 0 auto;
 }
 main h3, p{
 	padding: 0;
