--- a/rozetka_3/css/style.css
+++ b/rozetka_3/css/style.css
@@ -75,7 +75,14 @@ body{
 }
 
 .center{
-text-align: center;
+	text-align: center;
+}
+h1{
+	line-height:1.5;
+}
+.center img{
+	width:80%;
+	margin:0 auto;
 }
 main h3, p{
 	padding: 0;
