--- a/task_9_colesov/css/style.css
+++ b/task_9_colesov/css/style.css
@@ -98,6 +98,7 @@ h3{
 	padding-bottom: 100px;
 }
 .sidebar{
+	margin-top:20px;
 	margin-bottom: 20px;
 	flex: 100%;
 }
@@ -159,6 +160,7 @@ h3{
 	.sidebar{
 		max-width: 32.25%;
 		margin-bottom: 0;
+		margin-top:0;
 
 	}
 
