--- a/landingpage_01/css/style.css
+++ b/landingpage_01/css/style.css
@@ -7,7 +7,8 @@
 body{
 	/*font-family: Georgia, serif;*/
 	font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
-	color: #5e5e5e;
+	/*color: #5e5e5e;*/
+	color: #454545;
 
 }
 .clearfix:after{
@@ -29,6 +30,7 @@ h1{
 	text-transform: uppercase;
 	font-size: 50px;
 	line-height: 1.5;
+	color: #fff;
 }
 h2{
 	color: #1d1d1d;
@@ -54,7 +56,8 @@ img{
 .button{
 	background-color:  #fc635e;
 	text-align: center;
-	width: 200px;
+	text-transform: uppercase;
+	width: 220px;
 	border: 1px solid rgb(193, 26, 21);
 	border-radius: 5px;
 	margin:0 auto;
@@ -63,6 +66,7 @@ img{
 		0px 1px 6px 4px rgba(0, 0, 0, 0.07) inset,
 		0px 5px 3px 3px rgb(210, 210, 210);
 	transition: all 0.2s linear;
+	margin-bottom: 10px;
 }
 .button:hover{
     background: #ff8270;
@@ -459,7 +463,7 @@ img{
 
 .course_describe .button{
 	max-width: 100%;
-	width: 150px;
+	width: 200px;
 }
 
 
@@ -604,6 +608,7 @@ img{
 }
 .footer .my_container p{
 	color: #fff;
+	line-height: 1.2;
 }
 .footer .my_container .logo{
 	max-width: 80px;
@@ -734,30 +739,30 @@ img{
 		padding-bottom: calc(100% * 550 / 786);
 	}
 	.service{
-		width: 23%;
+		width: 22.7%;
 		position: absolute;
 	}
 	.service_one{
 		left: 0;
-		top:19%;
+		top:19.3%;
 	}
 	.service_two{
-		left: 33.6%;
-		top:28.2%;
+		left: 33.7%;
+		top:28.5%;
 	}
 	.service_three{
-		left: 44.9%;
-		top:0;
+		left: 45%;
+		top:0.8%;
 	}
 	.service_four{
 		width: 32.6%;
 		left: 67.5%;
-		top: 14.5%;
+		top: 14.8%;
 	}
 	.service_five{
 		width: 31.5%;
-		left: 7%;
-		top: 47.5%;
+		left: 6.8%;
+		top: 47%;
 	}
 	.fig{
 		position: relative;
@@ -823,7 +828,7 @@ img{
 		padding: 10px;
 		border-radius: 50%;
 		top: 15%;
-		left: -8%;
+		left: -11%;
 		background-color: #fc635e;
 		color: #fff;
 		z-index: 2;
@@ -840,7 +845,7 @@ img{
 	}
 	.service_four::before{
 		content: "\f5a2";
-		top: 20%;
+		top: 19%;
 	}
 	.service_four::after{
 		content: "\f19d";
@@ -852,6 +857,7 @@ img{
 	}	
 	.picture h3{
 		font-size: 24px;
+		line-height: 2;
 	}
 	.advantages .my_container{
 		padding-bottom: 60px;
