--- a/landingpage_01/css/courseStyle.css
+++ b/landingpage_01/css/courseStyle.css
@@ -15,6 +15,224 @@
 	display: none;
 }
 
-.row{
-	border:1px solid red;
+.header_course{
+	width: 100%;
+	height: auto;
+	background-image: url(../img/header_course.jpg);
+	background-size: cover;
+	background-position: center top;
+	position: relative;
+
+}
+.header_course::before{
+	position: absolute;
+	content: '';
+	display: block;
+	width: 100%;
+	height: 100%;
+	background-color: #232323;
+	z-index: 1;
+	opacity: .8;
+}
+.header_course .wrap_header{
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	z-index: 2;
+}
+.header_course .container{
+	margin-top: 50px;
+	padding-bottom: 50px;
+}
+.header_course .container .row{
+	align-items: center;
+}
+.button{
+	box-shadow:
+		0px 5px 3px 0px rgb(109, 105, 105);
+}
+.img_header{
+	width: 300px;
+	padding-top: 20px;
+	margin: 0 auto;
+}
+h1{
+	font-size: 32px;
+	text-align: center;
+}
+h1::after{
+	content: '';
+	width: 100%;
+	display: block;
+	margin: 0 auto;
+	margin-bottom: 50px;
+	border-bottom: 1px solid #adadad;
+}
+h2{
+	width: 100%;
+	text-align: left;
+	padding-bottom: 10px; 
+	margin: 0;
+
+}
+h2:after{
+	display: none;
+}
+h3{
+	color:  #1d1d1d;
+}
+
+
+.social{
+	justify-content: center;
+	padding-top: 30px;
+	padding-bottom: 10px;
+	position: relative;
+}
+.social::after{
+	content: '';
+	width: 80%;
+	height: 1px;
+	position: absolute;
+	top: 100%;
+	background:  #adadad;
+}
+.soc-button{
+	display: block;
+	margin: 5px;
+	width:33px;
+	height:39px;
+	background:url(../img/sprite.png) no-repeat;
+	background-size: 200px 100px;
+}
+.facebook{
+	background-position: -7px -7px;
+}
+.facebook:hover{
+	background-position: -7px -57px;
+}
+.twitter{
+	background-position:-58px -7px;
+}
+.twitter:hover{
+	background-position:-58px -57px;
+}
+.youtube{
+	background-position:-109px -7px;
+}
+.youtube:hover{
+	background-position:-109px -57px;
+}
+.a-mail{
+	background-position: -162px -7px;
+}
+.a-mail:hover{
+	background-position: -162px -57px;
+}
+.calendar{
+	padding-top: 30px;
+	position: relative;
+	justify-content: space-around;
+}
+.calendar::after{
+	content: '';
+	width: 80%;
+	height: 1px;
+	position: absolute;
+	top: 100%;
+	background:  #adadad;
+}
+.start::before{
+	font-family: "Font Awesome 5 Free";
+	content: '\f073';
+	padding-right: 5px;
+
+}
+h2 span{
+	color: #adadad;
+}
+h2 span, h2 a{
+	font-size: 16px;
+}
+.twit_head{
+	position: relative;
+}
+.twit_head::after{
+	content: '';
+	width: 90%;
+	height: 1px;
+	position: absolute;
+	top: 90%;
+	background:  #adadad;
+}	
+
+.logo_twitter{
+	display: inline-block;
+	padding: 5px;
+	width: 35px;
+	height: 35px;
+	background: #000;
+}
+.twit_hide{
+	opacity: 0;
+}
+.twit_hide:hover{
+	opacity: 1;
+}
+.twit_hide i{
+	padding-right: 15px;
+}
+.twit_hide i:hover{
+	color:  #fc635e;
+}
+
+.footer_course{
+	background-image: url(../img/footer.png);
+	background-size: cover;
+	background-position: center center;
+	min-width: 100%;
+	position: relative;
+}
+
+.footer_course .container{
+	padding: 10px;
+	position: relative;
+	color: #fff;
+	line-height: 1.2;
+	z-index: 2;
+}
+.footer_course::before{
+	content: '';
+	display: block;
+	width: 100%;
+	height: 100%;
+	background-color: #232323;
+	position: absolute;
+	z-index: 1;
+	opacity: .7;
+}
+.footer_course img{
+	max-width: 25%;
+	margin: 0 auto;
+}
+
+.footer_course .logo{
+	order: 1;
+}
+@media (min-width: 768px) { 
+	.sidebar{
+		padding-left: 40px;
+	}
+
+	.footer_course a{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		height: 100%;
+	}
+	.footer_course .logo{
+	order: 0;
+}
+	
 }
