--- a/landingpage_01/css/courseStyle.css
+++ b/landingpage_01/css/courseStyle.css
@@ -52,6 +52,10 @@
 	box-shadow:
 		0px 5px 3px 0px rgb(109, 105, 105);
 }
+.photo_teacher{
+	width: 200px;
+	margin: auto;
+}
 .img_header{
 	width: 300px;
 	padding-top: 20px;
