--- a/landingpage_01/css/courseStyle.css
+++ b/landingpage_01/css/courseStyle.css
@@ -36,9 +36,15 @@
 }
 .header_course .wrap_header{
 	position: relative;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 	z-index: 2;
 }
 .header_course .container{
@@ -46,10 +52,14 @@
 	padding-bottom: 50px;
 }
 .header_course .container .row{
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 .button{
-	box-shadow:
+	-webkit-box-shadow:
+		0px 5px 3px 0px rgb(109, 105, 105);
+	        box-shadow:
 		0px 5px 3px 0px rgb(109, 105, 105);
 }
 .photo_teacher{
@@ -90,7 +100,9 @@ h3{
 
 
 .social{
-	justify-content: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	padding-top: 30px;
 	padding-bottom: 10px;
 	position: relative;
@@ -138,7 +150,8 @@ h3{
 .calendar{
 	padding-top: 30px;
 	position: relative;
-	justify-content: space-around;
+	-ms-flex-pack: distribute;
+	    justify-content: space-around;
 }
 .calendar::after{
 	content: '';
@@ -223,7 +236,9 @@ h2 span, h2 a{
 }
 
 .footer_course .logo{
-	order: 1;
+	-webkit-box-ordinal-group: 2;
+	    -ms-flex-order: 1;
+	        order: 1;
 }
 @media (min-width: 768px) { 
 	.sidebar{
@@ -231,13 +246,21 @@ h2 span, h2 a{
 	}
 
 	.footer_course a{
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		justify-content: center;
-		align-items: center;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
 		height: 100%;
 	}
 	.footer_course .logo{
-	order: 0;
-}
+	-webkit-box-ordinal-group: 1;
+	    -ms-flex-order: 0;
+	        order: 0;
+	}
 	
 }
