--- a/landingpage_01/css/style.css
+++ b/landingpage_01/css/style.css
@@ -1,8 +1,10 @@
 *{
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 }
 ::after, ::before {
-     box-sizing: content-box; 
+     -webkit-box-sizing: content-box;
+             box-sizing: content-box; 
 }
 body{
 	/*font-family: Georgia, serif;*/
@@ -62,9 +64,14 @@ img{
 	border-radius: 5px;
 	margin:0 auto;
 	padding: 10px;
-	box-shadow:
+	-webkit-box-shadow:
 		0px 1px 6px 4px rgba(0, 0, 0, 0.07) inset,
 		0px 5px 3px 3px rgb(210, 210, 210);
+	        box-shadow:
+		0px 1px 6px 4px rgba(0, 0, 0, 0.07) inset,
+		0px 5px 3px 3px rgb(210, 210, 210);
+	-webkit-transition: all 0.2s linear;
+	-o-transition: all 0.2s linear;
 	transition: all 0.2s linear;
 	margin-bottom: 10px;
 }
@@ -102,14 +109,25 @@ img{
 }
 .header .my_container{
 	position: relative;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 	z-index: 2;
 }
 .head{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-flow: column wrap;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-flow: column wrap;
+	        flex-flow: column wrap;
 	text-align: center;
 	color: #fff;
 	margin: auto;
@@ -124,7 +142,9 @@ img{
 	margin: 0;
 }
 .menu_course{
-	justify-content: flex-end;
+	-webkit-box-pack: end;
+	    -ms-flex-pack: end;
+	        justify-content: flex-end;
 }
 .nav-link{
 	color:#fff;
@@ -221,7 +241,8 @@ img{
 .searchbox input[type=text] {
 	width: 230px;
 	height: 34px;
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	border: 2px solid #ccc;
 	border-radius: 4px;
 	font-size: 16px;
@@ -231,6 +252,7 @@ img{
 	float: right;
 	opacity: .7;
 	-webkit-transition: width 0.4s ease-in-out;
+	-o-transition: width 0.4s ease-in-out;
 	transition: width 0.4s ease-in-out;
 }
 .searchbox button {
@@ -247,7 +269,8 @@ img{
 	cursor: pointer;
 }
 .searchbox button:hover{
-	box-shadow: 0 2px 4px rgba(0,0,0,.25);
+	-webkit-box-shadow: 0 2px 4px rgba(0,0,0,.25);
+	        box-shadow: 0 2px 4px rgba(0,0,0,.25);
 }
 .searchbox input[type=text]:focus {
 	width: 80%;
@@ -328,8 +351,12 @@ img{
 
 .picture{
 	min-height: 200px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	background-image: url(../img/bg_02.jpg);
 	background-size: 100%;
 	background-position: center center;
@@ -408,16 +435,25 @@ img{
 	background-color: #f2f2f2;
 }
 .learn .my_container, .teach .my_container{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	margin-bottom: 10px;
 	margin-top: 10px;
 }
 .aim{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-flow: column wrap;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-flow: column wrap;
+	        flex-flow: column wrap;
 	width: 100%;
 	height: 200px;
-	justify-content: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 }
 .photo_block{
 	display: none;
@@ -442,8 +478,11 @@ img{
 	background-color: #f2f2f2;
 }
 .block_flex{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 }
 .course{
 	width: 100%;
@@ -481,9 +520,15 @@ img{
 .quote_container{
 	width: 100%;
 	height: auto;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	align-items: flex-end;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: end;
+	    -ms-flex-align: end;
+	        align-items: flex-end;
 }
 .quote{
 	width: 75px;
@@ -494,10 +539,18 @@ img{
 }
 
 .people{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: nowrap;
-	flex-direction: column-reverse;
-	justify-content: center;
+	-ms-flex-wrap: nowrap;
+	    flex-wrap: nowrap;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: reverse;
+	    -ms-flex-direction: column-reverse;
+	        flex-direction: column-reverse;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	width: 100%;
 	height: 400px;
 }
@@ -506,11 +559,17 @@ img{
 	margin-right: auto;
 	width: 160px;
 	height: 185px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	background-size: cover;
 	background-position: center center;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	position: relative;
 	
 }
@@ -534,8 +593,12 @@ img{
 }
 
 .left-right{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	width: 100%;
 }
 
@@ -587,9 +650,16 @@ img{
 
 .footer .my_container{
 	padding: 10px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	align-items: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	position: relative;
 	z-index: 2;
 }
@@ -616,7 +686,9 @@ img{
 		
 }
 .footer .logo{
-	order: 1;
+	-webkit-box-ordinal-group: 2;
+	    -ms-flex-order: 1;
+	        order: 1;
 }
 .footer_block{
 	display: block;
@@ -640,7 +712,8 @@ img{
 	.flip_advantage{
 		width: 90%;	
 		height: 186px;
-		perspective: 1000px;
+		-webkit-perspective: 1000px;
+		        perspective: 1000px;
 }
 	.flip_advantage_inner {
 		width: 160px;
@@ -648,20 +721,27 @@ img{
  		position: relative;
   		text-align: center;
 		margin: 0 auto;
+		-webkit-transition: -webkit-transform 0.6s;
+		transition: -webkit-transform 0.6s;
+		-o-transition: transform 0.6s;
 		transition: transform 0.6s;
-		transform-style: preserve-3d;
+		transition: transform 0.6s, -webkit-transform 0.6s;
+		-webkit-transform-style: preserve-3d;
+		        transform-style: preserve-3d;
 	}
 	.flip_advantage_back{
 		display: block;
 	}
 	.flip_advantage:hover .flip_advantage_inner{
-		transform: rotateY(180deg);
+		-webkit-transform: rotateY(180deg);
+		        transform: rotateY(180deg);
 	}
 	.flip_advantage_front, .flip_advantage_back{
 		position: absolute;
 	  	height: 100%;
 	  	width: 100%;
-	  	backface-visibility: hidden;
+	  	-webkit-backface-visibility: hidden;
+	  	        backface-visibility: hidden;
 	}
 	.flip_advantage_front{
 		background-image: url(../img/button2.png);
@@ -678,7 +758,8 @@ img{
 	.flip_advantage_back{
 		background-image: url(../img/button1.png);
 		background-size: 100%;
-		transform: rotateY(180deg);
+		-webkit-transform: rotateY(180deg);
+		        transform: rotateY(180deg);
 	}
 	.flip_advantage_front .far, .flip_advantage_front .fas{
 		position: static;
@@ -702,17 +783,28 @@ img{
 	}
 	.photo_block{
 		width: 50%;
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		align-items: center;
-		justify-content: center;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
 	}
 	.photo_block img{
 		width: 85%;
 	}
 	.course{
 		width: 50%;
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		flex-direction: column;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
 	}
 	
 	.course_img{
@@ -866,7 +958,10 @@ img{
 	 	width: 25%;
 	}
 	.course{
-		flex-direction: row;
+		-webkit-box-orient: horizontal;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: row;
+		        flex-direction: row;
 	}
 	.course_img{
 		width: 40%;
@@ -882,20 +977,34 @@ img{
 		height: 150px;
 	}
 	.people{
-		justify-content: space-between;
-		flex-direction: row;
-		align-items: center;
+		-webkit-box-pack: justify;
+		    -ms-flex-pack: justify;
+		        justify-content: space-between;
+		-webkit-box-orient: horizontal;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: row;
+		        flex-direction: row;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
 		height: 320px;
 	}
 	.lang, .full_name{
 		width: 33.33%;
 	}
 	.footer .my_container{
-		flex-direction: row;
-		justify-content: space-between;
+		-webkit-box-orient: horizontal;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: row;
+		        flex-direction: row;
+		-webkit-box-pack: justify;
+		    -ms-flex-pack: justify;
+		        justify-content: space-between;
 	}
 	.footer .logo{
-		order: 0;
+		-webkit-box-ordinal-group: 1;
+		    -ms-flex-order: 0;
+		        order: 0;
 		max-width: 15%;
 	}
 	
