--- a/landingpage_01/css/style.css
+++ b/landingpage_01/css/style.css
@@ -600,6 +600,7 @@ img{
 	    -ms-flex-pack: center;
 	        justify-content: center;
 	width: 100%;
+	padding-bottom: 20px;
 }
 
 .lang, .full_name{
